2011-09-20  Jer Noble  <jer.noble@apple.com>

        MediaControlSeekButtonElement should support seeking by changing the playback rate.
        https://bugs.webkit.org/show_bug.cgi?id=63595

        Reviewed by Eric Carlson.

        * media/video-controls-scanning-expected.txt: Added.
        * media/video-controls-scanning.html: Added.
        * platform/mac/media/video-controls-scanning-expected.txt: Added.

2011-10-10  Filip Pizlo  <fpizlo@apple.com>

        REGRESSIoN (r95399): Web process hangs when opening documents on Google Docs
        https://bugs.webkit.org/show_bug.cgi?id=69412

        Reviewed by Oliver Hunt.

        * fast/js/dfg-min-max-expected.txt: Added.
        * fast/js/dfg-min-max.html: Added.
        * fast/js/script-tests/dfg-min-max.js: Added.
        (doMin):
        (doMax):

2011-10-10  James Simonsen  <simonjam@chromium.org>

        [Chromium] Add baselines for new tests. Update baselines for 10.6 debug and rolled out v8 change.

        Unreviewed.

        * platform/chromium-mac-snowleopard/fast/lists/inline-before-content-after-list-marker-expected.png: Added.
        * platform/chromium-mac-snowleopard/fast/runin/runin-between-list-marker-and-before-content-expected.png: Added.
        * platform/chromium-win/fast/lists/inline-before-content-after-list-marker-expected.png: Added.
        * platform/chromium-win/fast/runin/runin-between-list-marker-and-before-content-expected.png: Added.
        * platform/chromium/test_expectations.txt:

2011-10-10  Jeremy Apthorp  <jeremya@chromium.org>

        Exiting fullscreen shouldn't crash if the element that was fullscreened
        had associated anonymous blocks.
        https://bugs.webkit.org/show_bug.cgi?id=68503

        When exiting fullscreen, if the child of the RenderFullScreen is a
        block and the parent has inline flow elements, the parent's children
        should be made non-inline before adding the fullscreened element back
        to the parent.
