@@ -1,0 +1,3 @@
+
+Success: Text
+This automated layout test checks to see that ondragenter events are being sent.
