@@ -1,3 +1,15 @@
+2011-10-10  Ryosuke Niwa  <rniwa@webkit.org>
+
+        REGRESSION(r96870): editing/pasteboard/smart-paste-008.html fails on non-Mac
+        https://bugs.webkit.org/show_bug.cgi?id=69587
+
+        Reviewed by Enrica Casucci.
+
+        Insert a space at the correct offset when startNode is a text node.
+
+        * editing/ReplaceSelectionCommand.cpp:
+        (WebCore::ReplaceSelectionCommand::addSpacesForSmartReplace):
+
 2011-09-20  Jer Noble  <jer.noble@apple.com>
 
         MediaControlSeekButtonElement should support seeking by changing the playback rate.
